--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -5,15 +5,16 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.0.+'
+    compile 'com.android.support:support-v4:23.0.1'
     compile 'com.google.android.gms:play-services:3.2.+'
-    compile 'net.hockeyapp.android:HockeySDK:3.5.+'
-    compile 'com.googlecode.mp4parser:isoparser:1.0.+'
+    compile 'net.hockeyapp.android:HockeySDK:3.5.0'
+    compile 'com.googlecode.mp4parser:isoparser:1.0.6'
 }
 
 android {
+
     compileSdkVersion 22
-    buildToolsVersion '23.0.0'
+    buildToolsVersion '23.0.1'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -38,6 +39,7 @@ android {
             debuggable true
             jniDebuggable true
             signingConfig signingConfigs.debug
+            applicationIdSuffix ".dev"
         }
 
         release {
@@ -71,9 +73,15 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 14
+        //noinspection OldTargetApi
         targetSdkVersion 22
         versionCode 592
         versionName "3.1.3"
+
+        buildConfigField "int", "APP_ID", "${property('app.id')}"
+        buildConfigField "String", "APP_HASH", "\"${property('app.hash')}\""
+        buildConfigField "String", "LOG_EMAIL", "\"${property('log.email')}\""
+        buildConfigField "String", "HOCKEYAPP_HASH", "\"${property('hockeyapp.hash')}\""
     }
 }
